--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "ioredis": "^5.2.4",
     "nanoid": "^4.0.0",
     "next": "13.1.1",
+    "pusher": "^5.1.2",
+    "pusher-js": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.0.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
