--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ioredis": "^5.2.4",
     "nanoid": "^4.0.0",
     "next": "13.1.1",
+    "next-auth": "^4.18.7",
     "pusher": "^5.1.2",
     "pusher-js": "^8.0.0",
     "react": "18.2.0",
