--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "pusher-js": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-timeago": "^7.1.0",
     "swr": "^2.0.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/react-timeago": "^4.1.3",
     "autoprefixer": "^10.4.13",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "postcss": "^8.4.20",
